add sign in and sign up page

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -11,7 +11,7 @@
       <section class="section">
         <div class="container is-fluid">
           <div class="content">
-            <h4 class="title">Welcome to vorstellung</h4>
+            <h4 class="title">Die Welt ist Meine Vorstellung</h4>
           </div>
         </div>
       </section>
@@ -25,6 +25,7 @@
     <script type="text/javascript">
         var csrfToken = "{{csrf-token}}";
     </script>
-    {% script "/js/app.js" %}
+    <script src={{script}} type="application/javascript">
+    </script>
   </body>
 </html>
