add RDU to upload file

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -21,6 +21,7 @@
     {% style "/assets/bulma/css/bulma.min.css" %}
     {% style "/assets/material-icons/css/material-icons.min.css" %}
     {% style "/css/screen.css" %}
+    {% style "/css/rdu.css" %}
 
     <script type="text/javascript">
         var csrfToken = "{{csrf-token}}";
