module is better

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -26,6 +26,8 @@
     <script type="text/javascript">
         var csrfToken = "{{csrf-token}}";
     </script>
+    <script src="/js/shared.js" type="application/javascript">
+    </script>
     <script src={{script}} type="application/javascript">
     </script>
   </body>
